Add useful links and example image.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
         Q &amp; Z: move camera up/down<br />
         E &amp; C: move look-at target up/down<br />
         P: paused/unpause<br />
-        R: create sunflow scene description
+        R: create <a href="http://sunflow.sourceforge.net/">sunflow</a> scene description<br />
+        <br />
+        Halp: <a href="#">Why are these controls weird?</a><br />
+        What is <a href="http://sunflow.sourceforge.net/">Sunflow?</a><br />
+        Example Pictures?: <a href="http://www.flickr.com/photos/revdancatt/sets/72157634043397161">Oh yes</a><br />
+        About: <a href="#">The blogpost</a><br />
+        Source: <a href="https://github.com/revdancatt/CAT826-sunflow-filemaker">Github (it has nice comments)</a><br />
+        By: <a href="https://twitter.com/revdancatt">@revdancatt</a>
     </div>
 
     <div id="dialog" title="Scene ready" class="hidden">
